SKIF-676: Bruk Gradle-wrapper. Java 8 har ikke permgen.